samples/_failures_safe/1761157724_46b197_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_738b9a03.c: In function ‘main’:
./samples/SAFE/__tmp_738b9a03.c:145:12: error: missing terminating " character
  145 |     printf("3. Trans
      |            ^~~~~~~~~
./samples/SAFE/__tmp_738b9a03.c:145:5: error: expected expression at end of input
  145 |     printf("3. Trans
      |     ^~~~~~
./samples/SAFE/__tmp_738b9a03.c:145:5: error: expected declaration or statement at end of input
